--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset='utf-8'>
+        <link rel="stylesheet" href="/style.css" />
         <script src = '/dist/main.js' defer></script>
     </head>
     <body>
